2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>

	* data/nwam-network.desktop.in: Use preferences-system-network.png

2010-02-08  Lin Ma  <Lin.Ma@Sun.COM>

	* data/Makefile.am:
	* data/nwam-network.desktop.in: Fixed 14419 System>Administration>
	Network would open the NWAM Network Preferences dialog.

2010-02-05  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (dispatch_scan_results_from_wlan_array):
	* common/nwamui_wifi_net.c (nwamui_wifi_net_get_status): Fixed
	multiple bssid wlan connection only one bssid has the connected
	flag, so it may be set to disconnect when handle others.
	* nwam_core/lib/i386/libnwam.so.1: Sync with nwamd_133 x86.

2010-02-04  Calum Benson  <calum.benson@sun.com>

	* capplet/main.c:
	* common/libnwamui.h:
	* daemon/status_icon.c: (nwam_menu_create_static_menuitems):

	Tweak new panel menu wording slightly to match online help
	(s/Network Modifier Applications/ Network Modifiers),
	and change command line options from -v/--vpn-pref-dialog to
	-m/--nm-pref-dialog.

2010-02-03  Calum Benson  <calum.benson@sun.com>

	* capplet/main.c:
	* capplet/nwam_conn_stat_panel.c: (vpn_clicked_cb):
	* capplet/nwam_vpn_pref_dialog.c: (vpn_pref_clicked_cb),
	(nwam_vpn_pre_selection_validate):
	* common/nwamui_cond.c: (nwamui_cond_field_to_str):
	* daemon/nwam-tooltip-widget.c: (nwam_object_notify):
	* daemon/status_icon.c: (nwam_menu_create_static_menuitems):
	* daemon/status_icon_tooltip.c: (nwam_tooltip_widget_update_enm):
	* tests/main.c:
	* ui/nwam-manager-properties.ui:

	Change all user-visible occurrences of 'VPN Application' and
	related variations, to 'Network Modifier' or equivalent variation.
	Per agreement on nwam-dev mailing list:
	http://mail.opensolaris.org/pipermail/nwam-dev/2010-February/005821.html

2010-02-01  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_vpn_pref_dialog.c (nwam_vpn_selection_changed):
	Fixed 14261 [132] nwam VPN when Editing start/stop rules SMF
	service is unselected

2010-01-29  Lin Ma  <Lin.Ma@Sun.COM>
