@@ -1,5 +1,12 @@
 2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>
 
+	* common/nwamui_ncp.c (nwamui_ncp_set_property):
+	* common/nwamui_ncu.c (nwamui_ncu_set_property):
+	* common/nwamui_wifi_net.c (nwamui_object_real_set_handle):
+	Review and change some g_error to g_warning.
+
+2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>
+
 	* data/nwam-network.desktop.in: Use preferences-system-network.png
 
 2010-02-08  Lin Ma  <Lin.Ma@Sun.COM>
